--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.22.0
 pandas==1.5.3
 joblib==1.2.0
-numpy==1.23.5
+numpy>=1.24
 matplotlib==3.6.2
 seaborn==0.12.1
 scikit-learn==1.1.3
