--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,61 @@
-streamlit==1.22.0
-pandas==1.5.3
+altair==4.2.2
+attrs==25.1.0
+blinker==1.9.0
+cachetools==5.5.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+entrypoints==0.4
+fonttools==4.55.8
+gitdb==4.0.12
+GitPython==3.1.44
+idna==3.10
+importlib_metadata==8.6.1
+Jinja2==3.1.5
 joblib==1.2.0
-numpy>=1.24
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 matplotlib==3.6.2
+mdurl==0.1.2
+narwhals==1.25.0
+numpy==1.23.5
+packaging==24.2
+pandas==1.5.3
+pillow==11.1.0
+protobuf==3.20.3
+pyarrow==19.0.0
+pydeck==0.9.1
+Pygments==2.19.1
+Pympler==1.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+pywin32==308
+referencing==0.36.2
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.22.3
+scikit-learn==1.6.1
+scipy==1.15.1
 seaborn==0.12.1
-scikit-learn>=1.2.0
+six==1.17.0
+smmap==5.0.2
+streamlit==1.22.0
+tenacity==8.5.0
+threadpoolctl==3.5.0
+toml==0.10.2
+toolz==1.0.0
+tornado==6.4.2
+typing_extensions==4.12.2
+tzdata==2025.1
+tzlocal==5.2
+urllib3==2.3.0
+validators==0.34.0
+watchdog==6.0.0
+zipp==3.21.0
